archive/cleanup_20250610/import_test_output_v3.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "C:\project-kortana\src\kortana\__init__.py", line 14
    from .core.brain import Brain
    ^^^^
SyntaxError: expected 'except' or 'finally' block
--- sys.path ---

C:\Program Files\Python311\python311.zip
C:\Program Files\Python311\DLLs
C:\Program Files\Python311\Lib
C:\Program Files\Python311
C:\project-kortana\.test_env
C:\project-kortana\.test_env\Lib\site-packages
C:\project-kortana\src
--- end sys.path ---
